--- a/frontend/src/pages/Users/Users.css
+++ b/frontend/src/pages/Users/Users.css
@@ -494,6 +494,16 @@
   color: #991b1b;
 }
 
+.badge-goma {
+  background: #e0f2fe;
+  color: #0369a1;
+}
+
+.badge-bor {
+  background: #f5f3ff;
+  color: #5b21b6;
+}
+
 .password-info {
   display: flex;
   flex-direction: column;
