--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   height: 70px;
-  background: #4b6e8b;
+  background: #186761;
   color: white;
   display: flex;
   justify-content: space-between;
